--- a/index.html
+++ b/index.html
@@ -9,27 +9,23 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body { margin: 0; font-family: 'Prompt', sans-serif; background-image: url('https://i.postimg.cc/mr5PY1FR/IMG-2575.jpg'); background-size: cover; background-position: center; background-attachment: fixed; color: #4a4a4a; }
-    .container { max-width: 950px; margin: 3rem auto; background: rgba(255, 245, 248, 0.75); border-radius: 25px; padding: 2rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); animation: fadeIn 1s ease-in-out; position: relative; }
+    .container { max-width: 950px; margin: 3rem auto; background: rgba(255, 245, 248, 0.75); border-radius: 25px; padding: 2rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); animation: fadeIn 1s ease-in-out; }
     @keyframes fadeIn { 0% { opacity: 0; transform: translateY(30px); } 100% { opacity: 1; transform: translateY(0); } }
     h1 { text-align: center; color: #ff7b9c; font-size: 2.2rem; margin-bottom: 1.5rem; }
-    .chart-wrapper { width: 100%; height: 300px; background: #fff; border-radius: 15px; padding: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); box-sizing: border-box; }
-    .chart-wrapper canvas { width: 100% !important; height: 100% !important; }
+    .chart-wrapper { width: 100%; height: 300px; background: #fff; border-radius: 15px; padding: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
     .anim-character { display: block; margin: 20px auto; width: 180px; animation: float 3s ease-in-out infinite; }
     @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
     .popup { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); justify-content: center; align-items: center; z-index: 99999; opacity: 0; transition: opacity 0.3s ease-in-out; }
     .popup.show { display: flex; opacity: 1; }
     label { display: block; margin-top: 1rem; font-weight: 600; color: #b85d8c; }
-    input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; margin-top: 0.3rem; font-size: 1rem; background-color: #fff0f6; transition: all 0.3s ease; box-shadow: inset 0 1px 2px rgba(255, 180, 200, 0.3); }
+    input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; margin-top: 0.3rem; font-size: 1rem; background-color: #fff0f6; }
     input:focus { outline: none; box-shadow: 0 0 8px #ffaec8; background-color: #ffe5ec; }
-    button { position: relative; margin-top: 1.5rem; background-color: #ffb3ab; border: none; padding: 0.8rem 1.8rem; border-radius: 20px; font-weight: bold; cursor: pointer; color: #fff; transition: all 0.2s ease-in-out; font-size: 1rem; margin-right: 0.5rem; box-shadow: 0 6px #f18d94; }
+    button { margin-top: 1.5rem; background-color: #ffb3ab; border: none; padding: 0.8rem 1.8rem; border-radius: 20px; font-weight: bold; cursor: pointer; color: #fff; font-size: 1rem; margin-right: 0.5rem; box-shadow: 0 6px #f18d94; }
     button:hover { transform: scale(1.05); background-color: #ffcad4; box-shadow: 0 6px #f5a5ae; }
-    button:active { transform: translateY(4px); box-shadow: 0 2px #e28a8a; }
-    table { margin-top: 2rem; width: 100%; border-collapse: collapse; background-color: #fffafc; border-radius: 15px; overflow: hidden; animation: fadeIn 1s ease-in-out; }
+    table { margin-top: 2rem; width: 100%; border-collapse: collapse; background-color: #fffafc; border-radius: 15px; overflow: hidden; }
     th, td { padding: 0.9rem; text-align: center; border-bottom: 1px solid #f3d6e0; font-size: 0.95rem; }
     th { background-color: #ffd4e3; color: #7c3a54; }
-    tr:last-child td { border-bottom: none; }
-    .due-soon { background-color: #ffcccc !important; }
-    tfoot td { background-color: #fff5f8; font-weight: bold; }
+    tfoot td { background-color: #ffe5ec; font-weight: bold; font-size: 1.05rem; color: #7c3a54; text-align: left; padding: 1rem; }
   </style>
 </head>
 <body>
@@ -38,7 +34,7 @@
     <div class="chart-wrapper">
       <canvas id="loanChart"></canvas>
     </div>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" alt="คนใส่แว่นถือแฟ้ม" class="anim-character" />
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" class="anim-character" />
 
     <form id="loanForm">
       <label>ชื่อ</label>
@@ -79,7 +75,7 @@
   </div>
 
   <div class="popup" id="popup">
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif" alt="popup">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif">
   </div>
 
   <script>
@@ -95,7 +91,9 @@
     }
 
     function updateChart(data) {
-      const ctx = document.getElementById('loanChart').getContext('2d');
+      const canvas = document.getElementById('loanChart');
+      if (!canvas) return;
+      const ctx = canvas.getContext('2d');
       if (window.loanChart && typeof window.loanChart.destroy === 'function') {
         window.loanChart.destroy();
       }
@@ -110,12 +108,7 @@
             borderRadius: 10
           }]
         },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: { legend: { display: false } },
-          scales: { y: { beginAtZero: true } }
-        }
+        options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false } }, scales: { y: { beginAtZero: true } } }
       });
     }
 
@@ -125,6 +118,7 @@
       tableBody.innerHTML = '';
       const now = new Date();
       const chartData = [];
+      let totalPrincipal = 0, totalAccumulated = 0, totalNextMonth = 0;
 
       loans.forEach((loan, index) => {
         const totalPaid = getTotalPaid(loan);
@@ -136,53 +130,53 @@
         const nextDue = new Date(loan.startDate);
         nextDue.setMonth(nextDue.getMonth() + 1);
 
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${loan.name}</td>
-          <td>${netPrincipal.toLocaleString()}</td>
-          <td>${loan.rate}%</td>
-          <td>${formatDate(loan.startDate)}</td>
-          <td>${daysPassed} วัน</td>
-          <td>${accumulated.toLocaleString()}</td>
-          <td>${nextMonth.toLocaleString()}</td>
-          <td>${formatDate(nextDue)}</td>
-          <td><button onclick="addRepayment(${index})">➕</button></td>
-          <td><button onclick="deleteLoan(${index})">🗑️</button></td>
-        `;
-        tableBody.appendChild(row);
+        totalPrincipal += netPrincipal;
+        totalAccumulated += accumulated;
+        totalNextMonth += nextMonth;
 
+        tableBody.innerHTML += `
+          <tr>
+            <td>${loan.name}</td>
+            <td>${netPrincipal.toLocaleString()}</td>
+            <td>${loan.rate}%</td>
+            <td>${formatDate(loan.startDate)}</td>
+            <td>${daysPassed} วัน</td>
+            <td>${accumulated.toLocaleString()}</td>
+            <td>${nextMonth.toLocaleString()}</td>
+            <td>${formatDate(nextDue)}</td>
+            <td><button onclick="addRepayment(${index})">➕</button></td>
+            <td><button onclick="deleteLoan(${index})">🗑️</button></td>
+          </tr>`;
         chartData.push({ name: loan.name, remaining: netPrincipal });
       });
 
-      if (chartData.length > 0) {
-        updateChart(chartData);
-      } else if (window.loanChart && typeof window.loanChart.destroy === 'function') {
-        window.loanChart.destroy();
-      }
+      document.getElementById('summaryFooter').innerHTML =
+        `💰 <b>เงินต้นคงเหลือรวม:</b> ${totalPrincipal.toLocaleString()} บาท &nbsp;|&nbsp; ` +
+        `📈 <b>ดอกเบี้ยสะสม:</b> ${totalAccumulated.toLocaleString()} บาท &nbsp;|&nbsp; ` +
+        `🔮 <b>ดอกเบี้ยเดือนหน้า:</b> ${totalNextMonth.toLocaleString()} บาท`;
+
+      if (chartData.length > 0) updateChart(chartData);
+      else if (window.loanChart && typeof window.loanChart.destroy === 'function') window.loanChart.destroy();
     }
 
     function addRepayment(index) {
       const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
-        alert('กรุณากรอกจำนวนที่ถูกต้อง');
-        return;
-      }
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) { alert('กรุณากรอกจำนวนที่ถูกต้อง'); return; }
       if (!loans[index].repayments) loans[index].repayments = [];
       loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
       localStorage.setItem('loans', JSON.stringify(loans));
       calcSummary();
     }
 
-    document.getElementById('loanForm').addEventListener('submit', function(e) {
+    document.getElementById('loanForm').addEventListener('submit', e => {
       e.preventDefault();
-      const newLoan = {
+      loans.push({
         name: document.getElementById('name').value,
         principal: parseFloat(document.getElementById('principal').value),
         rate: parseFloat(document.getElementById('rate').value),
         startDate: document.getElementById('startDate').value,
         repayments: []
-      };
-      loans.push(newLoan);
+      });
       localStorage.setItem('loans', JSON.stringify(loans));
       e.target.reset();
       calcSummary();
@@ -193,14 +187,10 @@
       const popup = document.getElementById('popup');
       if (!popup) return;
       popup.style.display = 'flex';
-      requestAnimationFrame(() => {
-        popup.classList.add('show');
-      });
+      requestAnimationFrame(() => popup.classList.add('show'));
       setTimeout(() => {
         popup.classList.remove('show');
-        setTimeout(() => {
-          popup.style.display = 'none';
-        }, 300);
+        setTimeout(() => popup.style.display = 'none', 300);
       }, 2000);
     }
 
@@ -216,7 +206,6 @@
       const wb = XLSX.utils.book_new();
       const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
       const now = new Date();
-
       loans.forEach(loan => {
         const totalPaid = getTotalPaid(loan);
         const netPrincipal = loan.principal - totalPaid;
@@ -224,23 +213,10 @@
         const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
         const accumulated = (interestPerDay * daysPassed).toFixed(2);
         const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate);
-        nextDue.setMonth(nextDue.getMonth() + 1);
-
-        wsData.push([
-          loan.name,
-          netPrincipal,
-          loan.rate + '%',
-          formatDate(loan.startDate),
-          `${daysPassed} วัน`,
-          parseFloat(accumulated),
-          parseFloat(nextMonth),
-          formatDate(nextDue.toISOString())
-        ]);
+        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
+        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue.toISOString())]);
       });
-
-      const ws = XLSX.utils.aoa_to_sheet(wsData);
-      XLSX.utils.book_append_sheet(wb, ws, 'Loan Summary');
+      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
       XLSX.writeFile(wb, 'loan_summary.xlsx');
     }
 
@@ -248,7 +224,7 @@
       const file = event.target.files[0];
       if (!file) return;
       const reader = new FileReader();
-      reader.onload = function(e) {
+      reader.onload = e => {
         try {
           const newData = JSON.parse(e.target.result);
           if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
@@ -256,9 +232,7 @@
           localStorage.setItem('loans', JSON.stringify(loans));
           calcSummary();
           alert('นำเข้าข้อมูลสำเร็จ');
-        } catch (err) {
-          alert('เกิดข้อผิดพลาดในการอ่านไฟล์: ' + err);
-        }
+        } catch (err) { alert('เกิดข้อผิดพลาด: ' + err); }
       };
       reader.readAsText(file);
     }
