--- a/index.html
+++ b/index.html
@@ -4,31 +4,129 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>บัญชีเงินกู้ ยู่ยี่</title>
-  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { margin: 0; font-family: 'Prompt', sans-serif; background-image: url('https://i.postimg.cc/mr5PY1FR/IMG-2575.jpg'); background-size: cover; background-position: center; background-attachment: fixed; color: #4a4a4a; }
-    .container { max-width: 950px; margin: 3rem auto; background: rgba(255, 245, 248, 0.75); border-radius: 25px; padding: 2rem; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); animation: fadeIn 1s ease-in-out; }
-    @keyframes fadeIn { 0% { opacity: 0; transform: translateY(30px); } 100% { opacity: 1; transform: translateY(0); } }
-    h1 { text-align: center; color: #ff7b9c; font-size: 2.2rem; margin-bottom: 1.5rem; }
-    .chart-wrapper { width: 100%; height: 300px; background: #fff; border-radius: 15px; padding: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); }
-    .anim-character { display: block; margin: 20px auto; width: 180px; animation: float 3s ease-in-out infinite; }
-    @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
-    .popup { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); justify-content: center; align-items: center; z-index: 99999; opacity: 0; transition: opacity 0.3s ease-in-out; }
-    .popup.show { display: flex; opacity: 1; }
-    label { display: block; margin-top: 1rem; font-weight: 600; color: #b85d8c; }
-    input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; margin-top: 0.3rem; font-size: 1rem; background-color: #fff0f6; }
-    input:focus { outline: none; box-shadow: 0 0 8px #ffaec8; background-color: #ffe5ec; }
-    button { margin-top: 1.5rem; background-color: #ffb3ab; border: none; padding: 0.8rem 1.8rem; border-radius: 20px; font-weight: bold; cursor: pointer; color: #fff; font-size: 1rem; margin-right: 0.5rem; box-shadow: 0 6px #f18d94; }
-    button:hover { transform: scale(1.05); background-color: #ffcad4; box-shadow: 0 6px #f5a5ae; }
-    table { margin-top: 2rem; width: 100%; border-collapse: collapse; background-color: #fffafc; border-radius: 15px; overflow: hidden; }
-    th, td { padding: 0.9rem; text-align: center; border-bottom: 1px solid #f3d6e0; font-size: 0.95rem; }
-    th { background-color: #ffd4e3; color: #7c3a54; }
-    tfoot td { background-color: #ffe5ec; font-weight: bold; font-size: 1.05rem; color: #7c3a54; text-align: left; padding: 1rem; line-height: 1.8; }
-    .val-gold { color: #d4af37; }
-    .val-green { color: #28a745; }
-    .val-blue { color: #007bff; }
+    body {
+      margin: 0;
+      font-family: 'Prompt', sans-serif;
+      background-image: url('https://i.postimg.cc/mr5PY1FR/IMG-2575.jpg');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: #4a4a4a;
+    }
+    .container {
+      max-width: 950px;
+      margin: 3rem auto;
+      background: rgba(255, 245, 248, 0.85);
+      border-radius: 25px;
+      padding: 2rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      text-align: center;
+      color: #ff7b9c;
+      font-size: 2.2rem;
+      margin-bottom: 1.5rem;
+    }
+    .chart-wrapper {
+      width: 100%;
+      height: 300px;
+      background: #fff;
+      border-radius: 15px;
+      padding: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
+      margin-bottom: 1.5rem;
+    }
+    .chart-wrapper canvas {
+      width: 100% !important;
+      height: 100% !important;
+    }
+    .anim-character {
+      display: block;
+      margin: 20px auto;
+      width: 180px;
+      animation: float 3s ease-in-out infinite;
+    }
+    @keyframes float {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-10px); }
+    }
+    label { font-weight: 600; color: #b85d8c; display: block; margin-top: 1rem; }
+    input {
+      width: 100%;
+      padding: 0.6rem;
+      border: 1px solid #fbcfd9;
+      border-radius: 14px;
+      font-size: 1rem;
+      background-color: #fff0f6;
+      box-shadow: inset 0 1px 2px rgba(255, 180, 200, 0.3);
+      margin-top: 0.3rem;
+    }
+    button {
+      margin-top: 1.5rem;
+      background-color: #ffb3ab;
+      border: none;
+      padding: 0.8rem 1.8rem;
+      border-radius: 20px;
+      font-weight: bold;
+      color: #fff;
+      cursor: pointer;
+      font-size: 1rem;
+      margin-right: 0.5rem;
+      box-shadow: 0 6px #f18d94;
+    }
+    button:hover {
+      transform: scale(1.05);
+      background-color: #ffcad4;
+      box-shadow: 0 6px #f5a5ae;
+    }
+    button:active {
+      transform: translateY(4px);
+      box-shadow: 0 2px #e28a8a;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 2rem;
+      background-color: #fffafc;
+      border-radius: 15px;
+      overflow: hidden;
+    }
+    th, td {
+      padding: 0.9rem;
+      text-align: center;
+      border-bottom: 1px solid #f3d6e0;
+      font-size: 0.9rem;
+    }
+    th {
+      background-color: #ffd4e3;
+      color: #7c3a54;
+    }
+    .due-soon {
+      background-color: #ffcccc !important;
+    }
+    .popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+      z-index: 99999;
+    }
+    .popup.show { display: flex; }
+    #summaryFooter {
+      padding: 1rem;
+      font-size: 0.95rem;
+      text-align: left;
+      background-color: #fff5f8;
+      line-height: 1.6;
+    }
   </style>
 </head>
 <body>
@@ -38,21 +136,17 @@
       <canvas id="loanChart"></canvas>
     </div>
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" class="anim-character" />
-
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
       <label>เงินต้น (บาท)</label>
       <input type="number" id="principal" required />
       <label>ดอกเบี้ยต่อเดือน (%)</label>
-      <input type="number" id="rate" step="0.01" required />
+      <input type="number" id="rate" required />
       <label>วันที่เริ่มยืม</label>
       <input type="date" id="startDate" required />
       <button type="submit">➕ เพิ่มลูกหนี้</button>
-      <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
-      <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
     </form>
-
     <table id="summaryTable">
       <thead>
         <tr>
@@ -65,180 +159,153 @@
           <th>ดอกเบี้ยเดือนหน้า</th>
           <th>ครบกำหนดถัดไป</th>
           <th>คืนเงินต้น</th>
+          <th>จ่ายดอก</th>
           <th>ลบ</th>
         </tr>
       </thead>
       <tbody></tbody>
       <tfoot>
-        <tr>
-          <td colspan="10" id="summaryFooter">—</td>
-        </tr>
+        <tr><td colspan="11" id="summaryFooter">—</td></tr>
       </tfoot>
     </table>
   </div>
 
   <div class="popup" id="popup">
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif" />
   </div>
 
   <script>
-    let loans = JSON.parse(localStorage.getItem('loans') || '[]');
+    let loans = JSON.parse(localStorage.getItem("loans") || "[]");
 
-    function formatDate(dateStr) {
-      const d = new Date(dateStr);
-      return d.toLocaleDateString('th-TH');
+    function formatDate(d) {
+      return new Date(d).toLocaleDateString("th-TH");
+    }
+
+    function getCurrentKey() {
+      const now = new Date();
+      return now.getFullYear() + "-" + (now.getMonth() + 1).toString().padStart(2, '0');
+    }
+
+    function showPopup() {
+      const popup = document.getElementById("popup");
+      popup.classList.add("show");
+      setTimeout(() => popup.classList.remove("show"), 2000);
     }
 
     function getTotalPaid(loan) {
       return (loan.repayments || []).reduce((sum, r) => sum + parseFloat(r.amount), 0);
     }
 
-    function updateChart(data) {
-      const canvas = document.getElementById('loanChart');
-      if (!canvas) return;
-      const ctx = canvas.getContext('2d');
-      if (window.loanChart && typeof window.loanChart.destroy === 'function') {
-        window.loanChart.destroy();
-      }
-      window.loanChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: data.map(l => l.name),
-          datasets: [{
-            label: 'เงินต้นคงเหลือ (บาท)',
-            data: data.map(l => l.remaining),
-            backgroundColor: '#ff9eb2',
-            borderRadius: 10
-          }]
-        },
-        options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: false } }, scales: { y: { beginAtZero: true } } }
-      });
-    }
-
     function calcSummary() {
-      const tableBody = document.querySelector('#summaryTable tbody');
-      if (!tableBody) return;
-      tableBody.innerHTML = '';
+      const tbody = document.querySelector("#summaryTable tbody");
+      tbody.innerHTML = "";
       const now = new Date();
       const chartData = [];
-      let totalPrincipal = 0, totalAccumulated = 0, totalNextMonth = 0;
+      let totalRemain = 0, totalAcc = 0, totalNext = 0;
+      let dueSoon = false;
 
-      loans.forEach((loan, index) => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
-        const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
-        const nextDue = new Date(loan.startDate);
-        nextDue.setMonth(nextDue.getMonth() + 1);
+      loans.forEach((l, i) => {
+        const paid = getTotalPaid(l);
+        const remain = l.principal - paid;
+        const passed = Math.floor((now - new Date(l.startDate)) / (1000 * 60 * 60 * 24));
+        const perDay = (remain * l.rate / 100) / 30;
+        const acc = parseFloat((perDay * passed).toFixed(2));
+        const nextMonth = parseFloat((remain * l.rate / 100).toFixed(2));
+        const dueDate = new Date(l.startDate);
+        dueDate.setMonth(dueDate.getMonth() + Math.floor(passed / 30) + 1);
+        const key = getCurrentKey();
+        const isDue = (dueDate - now) / (1000 * 60 * 60 * 24) <= 5 && l.paidInterestFor !== key;
+        if (isDue) dueSoon = true;
 
-        totalPrincipal += netPrincipal;
-        totalAccumulated += accumulated;
-        totalNextMonth += nextMonth;
+        const row = document.createElement("tr");
+        if (isDue) row.classList.add("due-soon");
+        row.innerHTML = `
+          <td>${l.name}</td>
+          <td>${remain.toLocaleString()}</td>
+          <td>${l.rate}%</td>
+          <td>${formatDate(l.startDate)}</td>
+          <td>${passed} วัน</td>
+          <td>${acc.toLocaleString()}</td>
+          <td>${nextMonth.toLocaleString()}</td>
+          <td>${formatDate(dueDate)}</td>
+          <td><button onclick="addRepayment(${i})">➕</button></td>
+          <td>${l.paidInterestFor === key
+            ? '<button style="background:#ccc;color:#777;cursor:default">จ่ายแล้ว</button>'
+            : '<button style="background:#c8f7dc;color:#235;border:none;padding:5px 10px;border-radius:15px;font-weight:bold" onclick="markPaid('+i+')">จ่ายดอกแล้ว</button>'}</td>
+          <td><button onclick="deleteLoan(${i})">🗑️</button></td>`;
+        tbody.appendChild(row);
 
-        tableBody.innerHTML += `
-          <tr>
-            <td>${loan.name}</td>
-            <td>${netPrincipal.toLocaleString()}</td>
-            <td>${loan.rate}%</td>
-            <td>${formatDate(loan.startDate)}</td>
-            <td>${daysPassed} วัน</td>
-            <td>${accumulated.toLocaleString()}</td>
-            <td>${nextMonth.toLocaleString()}</td>
-            <td>${formatDate(nextDue)}</td>
-            <td><button onclick="addRepayment(${index})">➕</button></td>
-            <td><button onclick="deleteLoan(${index})">🗑️</button></td>
-          </tr>`;
-        chartData.push({ name: loan.name, remaining: netPrincipal });
+        chartData.push({ name: l.name, remaining: remain });
+        totalRemain += remain;
+        totalAcc += acc;
+        totalNext += nextMonth;
       });
 
-      document.getElementById('summaryFooter').innerHTML =
-        `💰 เงินต้นคงเหลือรวม: <span class="val-gold">${totalPrincipal.toLocaleString()} บาท</span><br>` +
-        `📈 ดอกเบี้ยสะสม: <span class="val-green">${totalAccumulated.toLocaleString()} บาท</span><br>` +
-        `🔮 ดอกเบี้ยเดือนหน้า: <span class="val-blue">${totalNextMonth.toLocaleString()} บาท</span>`;
+      const footer = document.getElementById("summaryFooter");
+      footer.innerHTML = `
+        📌 เงินต้นคงเหลือรวม: ${totalRemain.toLocaleString()} บาท<br>
+        📌 ดอกเบี้ยสะสม: ${totalAcc.toLocaleString()} บาท<br>
+        📌 ดอกเบี้ยเดือนหน้า: ${totalNext.toLocaleString()} บาท`;
 
-      if (chartData.length > 0) updateChart(chartData);
-      else if (window.loanChart && typeof window.loanChart.destroy === 'function') window.loanChart.destroy();
+      if (chartData.length > 0) {
+        const ctx = document.getElementById("loanChart").getContext("2d");
+        if (window.loanChart) window.loanChart.destroy?.();
+        window.loanChart = new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels: chartData.map(x => x.name),
+            datasets: [{
+              label: "เงินต้นคงเหลือ",
+              data: chartData.map(x => x.remaining),
+              backgroundColor: "#ff9eb2",
+              borderRadius: 10
+            }]
+          },
+          options: { responsive: true, maintainAspectRatio: false }
+        });
+      }
+
+      if (dueSoon) showPopup();
+    }
+
+    function markPaid(index) {
+      loans[index].paidInterestFor = getCurrentKey();
+      localStorage.setItem("loans", JSON.stringify(loans));
+      calcSummary();
     }
 
     function addRepayment(index) {
-      const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) { alert('กรุณากรอกจำนวนที่ถูกต้อง'); return; }
+      const amount = prompt("กรุณากรอกจำนวนเงินต้นที่คืน:");
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) return;
       if (!loans[index].repayments) loans[index].repayments = [];
       loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
-      localStorage.setItem('loans', JSON.stringify(loans));
+      localStorage.setItem("loans", JSON.stringify(loans));
       calcSummary();
-    }
-
-    document.getElementById('loanForm').addEventListener('submit', e => {
-      e.preventDefault();
-      loans.push({
-        name: document.getElementById('name').value,
-        principal: parseFloat(document.getElementById('principal').value),
-        rate: parseFloat(document.getElementById('rate').value),
-        startDate: document.getElementById('startDate').value,
-        repayments: []
-      });
-      localStorage.setItem('loans', JSON.stringify(loans));
-      e.target.reset();
-      calcSummary();
-      showPopup();
-    });
-
-    function showPopup() {
-      const popup = document.getElementById('popup');
-      if (!popup) return;
-      popup.style.display = 'flex';
-      requestAnimationFrame(() => popup.classList.add('show'));
-      setTimeout(() => {
-        popup.classList.remove('show');
-        setTimeout(() => popup.style.display = 'none', 300);
-      }, 2000);
     }
 
     function deleteLoan(index) {
-      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
+      if (confirm("คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?")) {
         loans.splice(index, 1);
-        localStorage.setItem('loans', JSON.stringify(loans));
+        localStorage.setItem("loans", JSON.stringify(loans));
         calcSummary();
       }
     }
 
-    function downloadExcel() {
-      const wb = XLSX.utils.book_new();
-      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
-      const now = new Date();
-      loans.forEach(loan => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
-        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue.toISOString())]);
-      });
-      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
-      XLSX.writeFile(wb, 'loan_summary.xlsx');
-    }
-
-    function uploadData(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
-        try {
-          const newData = JSON.parse(e.target.result);
-          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
-          loans = newData;
-          localStorage.setItem('loans', JSON.stringify(loans));
-          calcSummary();
-          alert('นำเข้าข้อมูลสำเร็จ');
-        } catch (err) { alert('เกิดข้อผิดพลาด: ' + err); }
+    document.getElementById("loanForm").addEventListener("submit", e => {
+      e.preventDefault();
+      const loan = {
+        name: document.getElementById("name").value,
+        principal: parseFloat(document.getElementById("principal").value),
+        rate: parseFloat(document.getElementById("rate").value),
+        startDate: document.getElementById("startDate").value,
+        repayments: [],
       };
-      reader.readAsText(file);
-    }
+      loans.push(loan);
+      localStorage.setItem("loans", JSON.stringify(loans));
+      e.target.reset();
+      calcSummary();
+      showPopup();
+    });
 
     calcSummary();
   </script>
